# polygon_canvas

./: Cargo.toml  TODO.md
examples/: render_polygon.rs
src/: canvas.rs  lib.rs  nums.rs
src/algorithms/: fill_polygon.rs  mod.rs  scan_line.rs
src/engine/: engine.rs
src/geometry/: line.rs  mod.rs  point.rs  polygon.rs
